# DrawEverywhere-android

Android/: CMakeLists.txt
Android/src/main/: AndroidManifest.xml
Android/src/main/assets/models/: grid
Android/src/main/cpp/: background_renderer.cc  background_renderer.h  biquad.cc  biquad.h  common_util.cc  common_util.h  dependence_util.cc  dependence_util.h  draw_ar_application.cc  draw_ar_application.h  glb_object.cc  glb_object.h  glm.h  jni_interface.cc  jni_interface.h  jni_interface_for_place.cc  line_renderer.cc  line_renderer.h  obj_renderer.cc  obj_renderer.h  place_ar_application.cc  place_ar_application.h  plane_renderer.cc  plane_renderer.h  point_renderer.cc  point_renderer.h  saveGlb.cc  saveGlb.h  stroke_model.cc  stroke_model.h
Android/src/main/res/anim/: reverse_scale.xml  scale.xml  swing.xml
Android/src/main/res/color/: bottom_item_color_selector.xml  search_tab_color_selector.xml  switch_color_selector.xml  wallet_tab_color_selector.xml
Android/src/main/res/drawable/: bg_appcolor_radius.xml  bg_appcolorwhite_radius.xml  bottom_line.xml  box_border.xml  circle.xml  color_gradation_solana.xml  color_toolbar_bottom.xml  color_toolbar_top.xml  edge_circle.xml  floating_button.xml  focus_view.xml  ic_baseline_mark_email_unread_24.xml  ic_lamp_dark.xml  ic_lamp_light.xml  icon_ar.xml  icon_arrow_forward_57.xml  icon_auction.xml  icon_back.xml  icon_bell.xml  icon_check.xml  icon_coin.xml  icon_comment.xml  icon_copy.xml  icon_delete.xml  icon_download.xml  icon_draw_btn.xml  icon_edit.xml  icon_filter.xml  icon_focus.xml  icon_go.xml  icon_go_right.xml  icon_grid.xml  icon_hambuger_btn.xml  icon_heart.xml  icon_heart_filled.xml  icon_home.xml  icon_import.xml  icon_line_width.xml  icon_loading.xml  icon_location_ground.xml  (+44 more)
Android/src/main/res/layout/: activity_account_id.xml  activity_agreement.xml  activity_ar.xml  activity_ar_draw.xml  activity_ar_draw_tutorial.xml  activity_ar_draw_tutorial_0.xml  activity_ar_draw_tutorial_1.xml  activity_ar_draw_tutorial_2.xml  activity_ar_draw_tutorial_3.xml  activity_ar_draw_tutorial_4.xml  activity_ar_draw_tutorial_5.xml  activity_ar_draw_tutorial_6.xml  activity_login.xml  (+73 more)
(+159 files in other folders)
